fixes responsive problem
-fix buttons ‘Edit’ ‘Delete’ which don’t line up when in mobile looks

--- a/src/style.scss
+++ b/src/style.scss
@@ -132,3 +132,19 @@ body {
   height: 150px;
   width: 150px;
 }
+
+@media (max-width: 769px) {
+  .news,
+  .posts,
+  .imgposts{
+    width: 90vw;
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    animation: fadeInRight 500ms;
+  }
+  .EditButton{
+    display: inline;
+  }
+
+}
